[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/Leatherman/Walk/leatherman_walk2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Leatherman/Idle/leatherman_idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Leatherman/Idle/leatherman_idle3.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Leatherman/Idle/leatherman_idle2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Leatherman/Idle/leatherman_idle4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Leatherman/Walk/leatherman_walk1.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Leatherman/Defend/leatherman_defend2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Leatherman/Defend/leatherman_defend1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Leatherman/Hit/Leatherman_Hit3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Leatherman/Hit/Leatherman_Hit2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Leatherman/Hit/Leatherman_Hit1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Leatherman/Defend/leatherman_defend3.png" type="Texture" id=13]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 15.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 13 ) ],
"loop": false,
"name": "defend",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 13, 0 )

[sub_resource type="Animation" id=5]
resource_name = "HitLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/HitboxCollider:shape:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/HitboxCollider:shape:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/HitboxCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "HitRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/HitboxCollider:shape:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/HitboxCollider:shape:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/HitboxCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/HitboxCollider:shape:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/HitboxCollider:shape:b")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 13, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/HitboxCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 6 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
frame = 3
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="HitboxCollider" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HitLeft = SubResource( 5 )
anims/HitRight = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="animation_finished" from="PlayerSprite" to="." method="_on_PlayerSprite_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
